--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,22 @@
 {
   "name": "mediawiki-etalab-skin",
-  "version": "0.0.0",
   "authors": [
-    "Axel Haustant <noirbizarre@gmail.com>"
+    "Axel Haustant <axel.haustant@etalab2.fr>"
   ],
   "description": "Mediawiki bootstrap skin for ETALAB",
-  "license": "MIT",
+  "license": "GNU Affero GPL",
   "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
+    "bower",
     "test",
     "tests"
   ],
+  "resolutions": {
+    "jquery": "~2.0.3"
+  },
   "dependencies": {
-    "bootstrap": "~3.0.0",
-    "jquery": "~2.0.3",
-    "jquery-legacy": "http://code.jquery.com/jquery-1.10.2.js",
-    "modernizr": "~2.6.2",
-    "respond": "~1.3.0",
-    "flags": "*"
+    "etalab-assets": "*"
   }
 }
