--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "jquery": "~2.0.3"
   },
   "dependencies": {
-    "etalab-assets": "*"
+    "etalab-assets": "git://github.com/etalab/etalab-assets.git"
   }
 }
