--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,11 @@
     "tests"
   ],
   "resolutions": {
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "modernizr": "~2.7.1",
+    "respond": "~1.4.1"
   },
   "dependencies": {
-    "etalab-assets": "0.2.36"
+    "etalab-assets": "0.2.39"
   }
 }
