--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,9 @@
     "tests"
   ],
   "resolutions": {
-    "jquery": "~2.0.3",
-    "modernizr": "~2.7.1",
-    "respond": "~1.4.1"
+    "jquery": "~2.0.3"
   },
   "dependencies": {
-    "etalab-assets": "0.2.39"
+    "etalab-assets": "0.2.40"
   }
 }
