--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,10 @@
     "tests"
   ],
   "resolutions": {
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "bootstrap-select": "~1.4.1"
   },
   "dependencies": {
-    "etalab-assets": "0.2.50"
+    "etalab-assets": "0.2.52"
   }
 }
