--- a/bower.json
+++ b/bower.json
@@ -14,10 +14,9 @@
     "tests"
   ],
   "resolutions": {
-    "jquery": "~2.0.3",
-    "bootstrap-select": "~1.4.1"
+    "jquery": "~2.0.3"
   },
   "dependencies": {
-    "etalab-assets": "0.2.52"
+    "etalab-assets": "0.2.53"
   }
 }
